fixed overflow check for scenarios panel

--- a/css/index.css
+++ b/css/index.css
@@ -741,6 +741,7 @@ a, a:hover {
 	font-size: 14px;
 	color: #333333;
 	letter-spacing: 0;
+	line-height: 1.2;
 	text-align: left;
 	padding:0;
 	margin:0;
